--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/_GridViewPartial_DepositoBanco.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/_GridViewPartial_DepositoBanco.cshtml
@@ -75,8 +75,9 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(20);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add("IdCbteCble", "ID").Width = Unit.Percentage(5);
+        settings.Columns.Add("ba_descripcion", "Cuenta").Width = Unit.Percentage(30);
         settings.Columns.Add("cb_Observacion", "Observación").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
@@ -90,7 +91,7 @@
             column.FieldName = "cb_Valor";
             column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(8);
         });
         settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
