--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -1,16 +1,15 @@
-﻿@model Core.Erp.Info.Facturacion.fa_proforma_Info
+﻿@model Core.Erp.Info.Facturacion.fa_factura_Info
 @{
-    ViewBag.Title = "Nueva proforma";
+    ViewBag.Title = "Nueva factura";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@using (Html.BeginForm("Nuevo", "Proforma", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "Factura", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
-    @Html.HiddenFor(q => q.IdProforma)
+    @Html.HiddenFor(q => q.IdEmpresa)    
 
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -21,7 +20,7 @@
                     <h4 class="modal-title">Lotes disponibles</h4>
                 </div>
                 <div class="modal-body">
-                    @Html.Action("GridViewPartial_LoteProforma")
+                    @Html.Action("GridViewPartial_LoteFactura")
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -35,37 +34,23 @@
         <div class="col-md-6">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                    <label for="IdPuntoVta">Punto de venta*</label>
+                    @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdBodega">Bodega*</label>
-                    @Html.DropDownListFor(q => q.IdBodega, new SelectList(ViewBag.lst_bodega, "IdBodega", "bo_descripcion"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdBodega, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-8">
                 <div class="form-group">
                     <label for="IdCliente">Cliente*</label>
-                    @Html.Partial("_CmbCliente_Proforma", Model)
-                    @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="pr_dias_entrega">Días de entrega*</label>
-                    @Html.TextBoxFor(q => q.pr_dias_entrega, new { @class = "form-control", @id = "pr_dias_entrega" })
-                    @Html.ValidationMessageFor(q => q.pr_dias_entrega, "", new { @class = "text-danger" })
+                    @Html.Partial("_CmbCliente_Factura", Model)
+                    @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="pf_atencion_a">Atención a</label>
-                    @Html.TextBoxFor(q => q.pf_atencion_a, new { @class = "form-control", @id = "pf_atencion_a" })
-                    @Html.ValidationMessageFor(q => q.pf_atencion_a, "", new { @class = "text-danger" })
+                    <label for="IdClienteContacto">Contacto</label>
+                    @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_contacto, "IdContacto", "Nombres"), new { @class = "form-control", @id = "IdContacto" })
+                    @Html.ValidationMessageFor(q => q.IdContacto, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-6">
@@ -81,8 +66,8 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdTerminoPago">Termino pago*</label>
-                    @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "IdTerminoPago" })
-                    @Html.ValidationMessageFor(q => q.IdTerminoPago, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(q => q.vt_tipo_venta, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "IdTerminoPago" })
+                    @Html.ValidationMessageFor(q => q.vt_tipo_venta, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
@@ -92,16 +77,16 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.pf_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pf_fecha" })
-                        @Html.ValidationMessageFor(q => q.pf_fecha, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(q => q.vt_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "vt_fecha" })
+                        @Html.ValidationMessageFor(q => q.vt_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="pf_plazo">Plazo*</label>
-                    @Html.TextBoxFor(q => q.pf_plazo, new { @class = "form-control", @id = "pf_plazo" })
-                    @Html.ValidationMessageFor(q => q.pf_plazo, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(q => q.vt_plazo, new { @class = "form-control", @id = "pf_plazo" })
+                    @Html.ValidationMessageFor(q => q.vt_plazo, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
@@ -111,16 +96,16 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.TextBoxFor(q => q.pf_fecha_vcto, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "pf_fecha_vcto" })
-                        @Html.ValidationMessageFor(q => q.pf_fecha_vcto, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(q => q.vt_fech_venc, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "vt_fech_venc" })
+                        @Html.ValidationMessageFor(q => q.vt_fech_venc, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_observacion">Observación</label>
-                    @Html.TextBoxFor(q => q.pf_observacion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.pf_observacion, "", new { @class = "text-danger" })
+                    @Html.TextBoxFor(q => q.vt_Observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.vt_Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -128,14 +113,14 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
-                @Html.Action("GridViewPartial_proforma_det")
+                @Html.Action("GridViewPartial_factura_det")
             </div>
         </div>
     </div>
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Proforma",new { Area = "Facturacion" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Factura",new { Area = "Facturacion" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
@@ -147,19 +132,19 @@
         get_info_cliente();
 
         //Date picker
-        $('#pf_fecha').datepicker({
+        $('#vt_fecha').datepicker({
             autoclose: true
         })
-        $('#pf_fecha_vcto').datepicker({
+        $('#vt_fech_venc').datepicker({
             autoclose: true
         })
         $("#IdTerminoPago").change(function () {
             get_info_termino_pago();
         });
-        $("#pf_plazo").change(function () {
+        $("#vt_plazo").change(function () {
             cargar_fecha_vencimiento();
         });
-        $("#pf_fecha").change(function () {
+        $("#vt_fecha").change(function () {
             cargar_fecha_vencimiento();
         });
 
@@ -241,27 +226,57 @@
             }
         });
     }
-        function get_info_cliente() {
-            var tipo = IdCliente.GetValue();
 
-            var datos = {
-                IdCliente: tipo,
-                IdSucursal: $("#IdSucursal").val()
+
+    function get_info_cliente() {
+        var tipo = IdCliente.GetValue();
+
+        var datos = {
+            IdCliente: tipo,
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("get_info_cliente", "Proforma",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#IdVendedor").val(data.IdVendedor);
+            },
+            error: function (error) {
+                alert(error);
             }
-            $.ajax({
-                type: 'POST',
-                data: JSON.stringify(datos),
-                url: '@Url.Action("get_info_cliente", "Proforma",new { Area = "Facturacion"})',
-                async: false,
-                dataType: 'json',
-                contentType: 'application/json; charset=utf-8',
-                success: function (data) {
-                    $("#pf_atencion_a").val(data.info_persona.pe_nombreCompleto);
-                    $("#IdVendedor").val(data.IdVendedor);
-                },
-                error: function (error) {
-                    alert(error);
-                }
-            });
+
+        });
+        cargar_contactos();
     }
+
+    function cargar_contactos() {
+
+        $("#IdContacto").empty();
+        var codigo = IdCliente.GetValue();
+
+        var datos = {
+            IdCliente: codigo
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("cargar_contactos", "Factura",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres + "</option>");
+                    $("#IdContacto").val("0");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
+    
 </script>
