--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
@@ -3,17 +3,20 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-        settings.Name = "GridView_proforma";
-        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma" , IdSucursal = ViewBag.IdSucursal };
-        settings.KeyFieldName = "IdProforma";
+        settings.Name = "GridView_factura";
+        settings.CallbackRouteValues = new { Controller = "Factura", Action = "GridViewPartial_factura" , Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin };
+        settings.KeyFieldName = "IdCbteVta";
         settings.Width = Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+
         //Configuración scrolling y pager
         settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
         settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
@@ -48,7 +51,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToBoolean(e.GetValue("estado")) == false)
+            if (Convert.ToString(e.GetValue("Estado")) == "I")
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
@@ -58,11 +61,11 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "estado")) == true)
+                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdProforma = DataBinder.Eval(tc.DataItem, "IdProforma") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdProforma = DataBinder.Eval(tc.DataItem, "IdProforma") },
+                    Html.ActionLink("Modificar", "Modificar", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -78,38 +81,51 @@
             c.Width = Unit.Pixel(150);
         });
 
-        settings.Columns.Add("IdProforma", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(30);
-        settings.Columns.Add("pf_observacion", "Observación").Width = Unit.Percentage(15);
+        settings.Columns.Add("IdCbteVta", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pd_subtotal";
-            column.Caption = "Subtotal";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
-            column.Width = Unit.Percentage(10);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_iva";
-            column.Caption = "I.V.A.";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
-            column.Width = Unit.Percentage(10);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pd_total";
-            column.Caption = "Total";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
-            column.Width = Unit.Percentage(10);
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "pf_fecha";
+            column.FieldName = "vt_fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
-            column.Width = Unit.Percentage(10);
+            column.Width = Unit.Percentage(7);
         });
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(5);
+        settings.Columns.Add("NomContacto", "Cliente").Width = Unit.Percentage(30);
+        settings.Columns.Add("vt_NumFactura", "# Factura").Width = Unit.Percentage(15);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "vt_Subtotal";
+            column.Caption = "Subtotal";
+            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.Width = Unit.Percentage(7);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "vt_iva";
+            column.Caption = "I.V.A.";
+            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.Width = Unit.Percentage(7);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "vt_total";
+            column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.Width = Unit.Percentage(7);
+        });
+
+        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(5);
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "Despacho";
+            column.SetDataItemTemplateContent(c =>
+            {
+                if (DataBinder.Eval(c.DataItem, "IdNumMovi_in_eg_x_inv") != null)
+                {
+                    ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("INV_002", "InventarioReportes", new { Area = "Reportes", IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal_in_eg_x_inv"), IdMovi_inven_tipo = DataBinder.Eval(c.DataItem, "IdMovi_inven_tipo_in_eg_x_inv"), IdNumMovi = DataBinder.Eval(c.DataItem, "IdNumMovi_in_eg_x_inv") }, Request.Url.Scheme) + "');\"></span>");
+                }
+            });
+            column.Width = Unit.Percentage(5);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
