--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_ingreso_inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_ingreso_inventario.cshtml
@@ -5,7 +5,9 @@
         settings.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "GridViewPartial_ingreso_inventario" };
         settings.KeyFieldName = "IdNumMovi";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //CConfiguracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
